--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>Um pouco sobre quem somos</h1>
             <div class="first-step">
                 <h2>01.Nossa historia</h2>
-                <p>Nosso comando começou antes mesmo de carregar o nome de prf, eramos um comando militar inspirado no exercito brasileiro, depois de muitas historia e muita emoção. Decidimos então, criar um comando inspirado na policia rodoviaria federal.</p>
+                <p>Nosso comando começou antes mesmo de carregar o nome de prf, eramos um comando militar inspirado no exercito brasileiro, depois de muitas historias e muita emoções. Decidimos então, criar um comando inspirado na policia rodoviaria federal.</p>
             </div>
             <div class="second-step">
                 <h2>02.Nossa luta</h2>
