--- a/index.html
+++ b/index.html
@@ -49,6 +49,23 @@
                 <h2>03.O foco é você</h2>
                 <p>Sabemos muito bem que um comando só funciona se tiver membros dedicados e que realmente gostem do rp de policia, e isso é de extrema importancia para que tudo funcione, mas nossa prioridade é e sempre será a diversão coletiva.</p>
             </div>
+            <div class="fourty-step">
+                <h2>03.Regras</h2>
+                <p>1) não será tolerado falta de respeitos com os oficiais e patentes altas.</p>
+                <p>2) não será tolerado abuso de autoridade dos oficiais aos membros inferiores não justificadas pelo msm.</p>
+                <p>3) não pode ter máscara ou maquiagem no rosto do personagem além de lentes coloridas ou brincos.</p>
+                <p>4) todos deverão tá de acordo com o fardamento e terão as VTR autorizadas pelo comando, que são 52 tipos de modelos entre moto automóveis e aeronaves, sendo assim terão que comprar diretamente com o oficial de mecânica do comando responsável,  já upada ou se tiver o carro já terão que seguir a lista de peças acrescentadas no msm.</p>
+                <p>5) O comando é de RP ou seja 80% serão feitas em sessão de convite ou de comando, sendo assim os 20% restante serão na pública.</p>
+                <p>6) na sessão de RP terão uma lista de armas e explosivos liberadas sem upagem simulando a vida real, e nas públicas serão autorizadas todos os tipos de armas e veículos de combate ou não combate....obs: os veículos terão que ter as cores da PRF azul escuro e amarelo corrida, metálicos.
+                </p>
+                <p>7) será proibido matar membros no RP incluindo amigos do comando.</p>
+                <p>8) cortes de cabelo curto ou careca ou seja cortes curtos.
+                </p>
+                <p>9) tatuagens são liberadas, porém no rosto não apenas no pescoço...ou seja o rosto tem que tá limpo.</p>
+                <p>10) subidas de patentes serão realizadas durantes os serviços e operações realizadas no comando.
+                </p>
+                <p>11) a falta nas atividades serão toleradas com justificativa e chingamento não será tolerado com falta grave e penalização rigorosa.</p>
+            </div>
             <div class="container-img" id="patrulhas">
                 <img src="imagens/gta-5-7202.png" alt="image">
             </div>
