att de placeholder

--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
                     <div class="form-to-go" id="cadastro">
                         <div class="form-01">
                             <label for="inome">NOME</label>
-                            <input type="text" name="nome" id="inome" placeholder="nome do agente" required minlength="5" maxlength="34">
+                            <input type="text" name="nome" id="inome" placeholder="nome do policial" required minlength="5" maxlength="34">
                             <label for="isobrenome">SOBRENOME</label>
-                            <input type="text" name="sobrenome" id="isobrenome" placeholder="sobrenome do agente" required minlength="5" maxlength="34">
+                            <input type="text" name="sobrenome" id="isobrenome" placeholder="sobrenome do policial" required minlength="5" maxlength="34">
                         </div>
                         <div class="form-02">
                             <label for="iemail">E-MAIL</label>
-                            <input type="email" name="mail" id="iemail" placeholder="e-mail do agente" required minlength="5" maxlength="34">
+                            <input type="email" name="mail" id="iemail" placeholder="e-mail do policial" required minlength="5" maxlength="34">
                             <label for="iwhats">WHATSAPP</label>
                             <input type="tel" name="telfone" id="iwhats" required placeholder="(xx)xxxx-xxxx">
                         </div>
